# dvdrental_spark_miniproject

./: log4j.properties  main.py  pyproject.toml
data/: address.csv  customer.csv  staff.csv
lib/: logger.py
lib/schema/: actor.py  address.py  country.py  film_actor.py  inventory.py  language.py  staff.py
lib/utils/: tables.py
lib/views/: dimcustomer.py  dimdate.py  dimmovie.py  dimstore.py  factsales.py  full_location.py
schema/: category.py  city.py  customer.py  film.py  film_category.py  film_text.py  payment.py  rental.py  store.py
views/: dimcustomer.py  dimdate.py  dimmovie.py  dimstore.py  factsales.py  full_location.py
