[tool.poetry]
name = "dvd-rental"
version = "0.1.0"
description = ""
authors = ["Shammah Anucha <shammah.anucha@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
